--- a/src/main/webapp/css/contact.css
+++ b/src/main/webapp/css/contact.css
@@ -67,6 +67,105 @@ header {
     color: black;
 }
 
+.overlaySignin{
+    background: rgba(0,0,0,.3);
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	align-items: center;
+	justify-content: center;
+	display: flex;
+	visibility: hidden;
+
+}
+
+.overlaySignin .popupSignin {
+	width: 40%;
+    width: 700px;
+    height: 600px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.overlaySignin.active {
+	visibility: visible;
+}
+
+.popupSignin {
+	background: #F8F8F8;
+	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.3);
+	border-radius: 3px;
+	font-family: 'Montserrat', sans-serif;
+	padding: 20px;
+	text-align: center;
+	width: 600px;
+	
+	transition: .3s ease all;
+	transform: scale(0.7);
+	opacity: 0;
+}
+
+.overlaySignin .popupSignin .btn-cerrar-popupSignin {
+	font-size: 16px;
+	line-height: 16px;
+	display: block;
+	text-align: right;
+	transition: .3s ease all;
+	color: #BBBBBB;
+}
+
+.overlaySignin .popupSignin .btn-cerrar-popupSignin:hover {
+	color: #000;
+
+}
+
+.overlaySignin .popupSignin h4 {
+	font-size: 26px;
+	font-weight: 300;
+	margin-bottom: 40px;
+	opacity: 0;
+}
+
+.overlaySignin .popupSignin .images {
+	width: 40%;
+    align-content: center;
+}
+
+.overlaySignin .popupSignin .images h4 {
+	text-align: center;
+    margin-top: -80px;
+    font-weight: 600;
+    color: black;
+}
+
+.overlaySignin .popupSignin .images img {
+	border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+
+.overlaySignin .popupSignin .images:hover{
+	transform: translate(-15px);
+    transition: 0.5s;
+    box-shadow: 0 12px 14px rgba(0, 0, 0, 2);
+}
+
+
+.popupSignin.active {	
+	transform: scale(1); opacity: 1; 
+}
+
+.popupSignin.active h4 { 
+	animation: entradaSubtitulo 0s ease .0s forwards; 
+}
+.popupSignin.active .contenedor-inputs {
+	animation: entradaInputs 0s linear 0s forwards;
+}
 
 
 .overlay .popup {
@@ -131,6 +230,7 @@ header {
 	display: flex;
 	width: 100%;
 	margin-bottom: 15px;
+
   }
   
   .icon {
@@ -145,10 +245,12 @@ header {
 	width: 100%;
 	padding: 10px;
 	outline: none;
+
   }
   
   .input-field:focus {
-	border: 2px solid rgb(136, 170, 204);
+	background: rgba(65, 124, 184, 0.274);
+	border: 0px solid rgb(136, 170, 204);
   }
 
   
@@ -165,51 +267,9 @@ header {
   .btn:hover {
 	opacity: 1;
   }
-.container article bton-owner {
-    padding: 0 20px;
-	margin-bottom: 20px;
-	height: 40px;
-	line-height: 40px;
-	border: none;
-	color: black;
-	background: #5E7DE3;
-	border-radius: 3px;
-	font-family: 'Montserrat', sans-serif;
-	font-size: 16px;
-	cursor: pointer;
-	transition: .3s ease all;
-	cursor: pointer;
-}
-.container  bton-vet {
-    padding: 0 20px;
-	margin-bottom: 20px;
-	height: 40px;
-	line-height: 40px;
-	border: none;
-	color: #fff;
-	background: #5E7DE3;
-	border-radius: 3px;
-	font-family: 'Montserrat', sans-serif;
-	font-size: 16px;
-	cursor: pointer;
-	transition: .3s ease all;
-	cursor: pointer;
-}
-.container  bton-official {
-    padding: 0 20px;
-	margin-bottom: 20px;
-	height: 40px;
-	line-height: 40px;
-	border: none;
-	color: #fff;
-	background: #5E7DE3;
-	border-radius: 3px;
-	font-family: 'Montserrat', sans-serif;
-	font-size: 16px;
-	cursor: pointer;
-	transition: .3s ease all;
-	cursor: pointer;
-}
+
+
+
 .overlay{
     background: rgba(0,0,0,.3);
 	position: fixed;
@@ -415,11 +475,45 @@ header {
 	justify-content: center;
 	display: flex;
 	visibility: hidden;
-
 }
 
 .overlayOff.active {
 	visibility: visible;
+}
+
+.overlayOff .popupOff {
+    width: 40%;
+    width: 700px;
+    height: 600px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.overlayOff .popupOff .images {
+    width: 40%;
+    align-content: center;
+}
+
+.overlayOff .popupOff .images img {
+    border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+.overlayOff .popupOff .images h4 {
+    text-align: center;
+    margin-top: -80px;
+    font-weight: 600;
+    color: black;
+    
+}
+ .overlayOff .popupOff .images:hover {
+    transform: translate(-15px);
+    transition: 0.5s;
+    box-shadow: 0 12px 14px rgba(0, 0, 0, 2);
+
 }
 
 .popupOff {
@@ -430,7 +524,6 @@ header {
 	padding: 20px;
 	text-align: center;
 	width: 600px;
-	
 	transition: .3s ease all;
 	transform: scale(0.7);
 	opacity: 0;
@@ -467,13 +560,6 @@ header {
 	opacity: 0;
 }
 
-.contenedor-inputs img{
-    float: left;
-    
-    width: 50px;
-    height: 50px;
-}
-
 
 .popupOff form .contenedor-inputs input {
 	width: 85%;
@@ -504,7 +590,7 @@ header {
 }
 
 .popupOff.active {
-		transform: scale(1); opacity: 1; 
+	transform: scale(1); opacity: 1; 
 }
 
 .popupOff.active h3 { 
@@ -516,6 +602,52 @@ header {
 }
 .popupOff.active .contenedor-inputs { 
 	animation: entradaInputs 0s linear 0s forwards; 
+}
+
+.container article bton-owner {
+    padding: 0 20px;
+	margin-bottom: 20px;
+	height: 40px;
+	line-height: 40px;
+	border: none;
+	color: black;
+	background: #5E7DE3;
+	border-radius: 3px;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 16px;
+	cursor: pointer;
+	transition: .3s ease all;
+	cursor: pointer;
+}
+.container  bton-vet {
+    padding: 0 20px;
+	margin-bottom: 20px;
+	height: 40px;
+	line-height: 40px;
+	border: none;
+	color: #fff;
+	background: #5E7DE3;
+	border-radius: 3px;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 16px;
+	cursor: pointer;
+	transition: .3s ease all;
+	cursor: pointer;
+}
+.container  bton-official {
+    padding: 0 20px;
+	margin-bottom: 20px;
+	height: 40px;
+	line-height: 40px;
+	border: none;
+	color: #fff;
+	background: #5E7DE3;
+	border-radius: 3px;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 16px;
+	cursor: pointer;
+	transition: .3s ease all;
+	cursor: pointer;
 }
 
 .RegiOFF{
