--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -2,7 +2,7 @@
 
 html,
 body {
-    background-image: url("https://i.ibb.co/BtZ4PnS/background-Petss.png");
+    background-image: url("https://i.ibb.co/KrhFXSK/background-Owner-4.png");
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -66,16 +66,16 @@ button:hover {
     background-color: black;
 }
 
-
 ul {
     float: right;
     margin-top: 0%;
-}
 
+}
 .contenedor-inputs img{
     float: left;
     width: 50px;
     height: 50px;
+
 }
 
 .container {
@@ -85,6 +85,7 @@ ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+	cursor: pointer;
 }
 
 .container .images {
@@ -113,8 +114,15 @@ h1 {
     margin-top: -80px;
     font-weight: 600;
     color: white;
+
     
 }
+.container .images h5{
+	color: white;
+	 text-align: center;
+	
+	 font-weight: bold;
+ }
 
 .container .images:hover {
     transform: translate(-15px);
@@ -123,7 +131,13 @@ h1 {
 
 }
 
-.container article bton-owner {
+.carousel {
+    width: 30%;
+    height: 30%;
+    align-content: center;
+}
+
+.container bton-owner {
     padding: 0 20px;
 	margin-bottom: 20px;
 	height: 40px;
@@ -138,7 +152,7 @@ h1 {
 	transition: .3s ease all;
 	cursor: pointer;
 }
-.container  bton-vet {
+.container bton-vet {
     padding: 0 20px;
 	margin-bottom: 20px;
 	height: 40px;
@@ -153,7 +167,7 @@ h1 {
 	transition: .3s ease all;
 	cursor: pointer;
 }
-.container  bton-official {
+.container bton-official {
     padding: 0 20px;
 	margin-bottom: 20px;
 	height: 40px;
@@ -181,11 +195,9 @@ h1 {
 	visibility: hidden;
 
 }
-
 .overlay.active {
 	visibility: visible;
 }
-
 .popup {
 	background: #F8F8F8;
 	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.3);
@@ -198,9 +210,7 @@ h1 {
 	transition: .3s ease all;
 	transform: scale(0.7);
 	opacity: 0;
-}
-
-.popup .btn-cerrar-popup {
+}.popup .btn-cerrar-popup {
 	font-size: 16px;
 	line-height: 16px;
 	display: block;
@@ -211,9 +221,7 @@ h1 {
 
 .popup .btn-cerrar-popup:hover {
 	color: #000;
-}
-
-.popup h3 {
+}.popup h3 {
 	font-size: 36px;
 	font-weight: 600;
 	margin-bottom: 10px;
@@ -234,11 +242,14 @@ h1 {
 .popup form .contenedor-inputs input {
 	width: 85%;
 	margin-bottom: 20px;
-	height: 45px;
+	height: 48px;
 	font-size: 18px;
 	line-height: 52px;
 	text-align: center;
-	border: 1px solid #BBBBBB;
+	border: none;
+	padding: 10px;
+	outline: none;
+
 }
 
 .popup form .btn-submit {
@@ -259,19 +270,10 @@ h1 {
 	background: rgba(94,125,227, .9);
 }
 
-.popup.active {	
-	transform: scale(1); opacity: 1; 
-}
-
-.popup.active h3 { 
-	animation: entradaTitulo 0s ease 0s forwards; 
-}
-.popup.active h4 { 
-	animation: entradaSubtitulo 0s ease .0s forwards; 
-}
-.popup.active .contenedor-inputs { 
-	animation: entradaInputs 0s linear 0s forwards; 
-}
+.popup.active {	transform: scale(1); opacity: 1; }
+.popup.active h3 { animation: entradaTitulo .0s ease .0s forwards; }
+.popup.active h4 { animation: entradaSubtitulo .0s ease .0s forwards; }
+.popup.active .contenedor-inputs { animation: entradaInputs 0s linear 0s forwards; }
 
 .overlayVet{
     background: rgba(0,0,0,.3);
@@ -286,7 +288,6 @@ h1 {
 	visibility: hidden;
 
 }
-
 .overlayVet.active {
 	visibility: visible;
 }
@@ -302,9 +303,7 @@ h1 {
 	transition: .3s ease all;
 	transform: scale(0.7);
 	opacity: 0;
-}
-
-.popupVet .btn-cerrar-popupVet {
+}.popupVet .btn-cerrar-popupVet {
 	font-size: 16px;
 	line-height: 16px;
 	display: block;
@@ -333,6 +332,107 @@ h1 {
 .popupVet form .contenedor-inputs {
 	opacity: 0;
 }
+
+.overlaySignin{
+    background: rgba(0,0,0,.3);
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	align-items: center;
+	justify-content: center;
+	display: flex;
+	visibility: hidden;
+
+}
+
+.overlaySignin .popupSignin {
+	width: 40%;
+    width: 700px;
+    height: 600px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.overlaySignin.active {
+	visibility: visible;
+}
+
+.popupSignin {
+	background: #F8F8F8;
+	border: 3px #000;
+	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.3);
+	border-radius: 3px;
+	font-family: 'Montserrat', sans-serif;
+	padding: 20px;
+	text-align: center;
+	width: 600px;
+	transition: .3s ease all;
+	transform: scale(0.7);
+	opacity: 0;
+}
+
+.overlaySignin .popupSignin .btn-cerrar-popupSignin {
+	font-size: 16px;
+	line-height: 16px;
+	display: block;
+	text-align: right;
+	transition: .3s ease all;
+	color: #BBBBBB;
+}
+
+.overlaySignin .popupSignin .btn-cerrar-popupSignin:hover {
+	color: #000;
+
+}
+
+.overlaySignin .popupSignin h4 {
+	font-size: 26px;
+	font-weight: 300;
+	margin-bottom: 40px;
+	opacity: 0;
+}
+
+.overlaySignin .popupSignin .images {
+	width: 40%;
+    align-content: center;
+}
+
+.overlaySignin .popupSignin .images h4 {
+	text-align: center;
+    margin-top: -80px;
+    font-weight: 600;
+    color: black;
+}
+
+.overlaySignin .popupSignin .images img {
+	border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+
+.overlaySignin .popupSignin .images:hover{
+	transform: translate(-15px);
+    transition: 0.5s;
+    box-shadow: 0 12px 14px rgba(0, 0, 0, 2);
+}
+
+
+.popupSignin.active {	
+	transform: scale(1); opacity: 1; 
+}
+
+.popupSignin.active h4 { 
+	animation: entradaSubtitulo 0s ease .0s forwards; 
+}
+.popupSignin.active .contenedor-inputs { 
+	animation: entradaInputs 0s linear 0s forwards; 
+}
+
 .contenedor-inputs img{
     float: left;
     
@@ -348,7 +448,7 @@ h1 {
 	font-size: 18px;
 	line-height: 52px;
 	text-align: center;
-	border: 1px solid #BBBBBB;
+	border: none;
 }
 
 .popupVet form .btn-submit {
@@ -369,21 +469,10 @@ h1 {
 	background: rgba(94,125,227, .9);
 }
 
-.popupVet.active {
-	transform: scale(1); opacity: 1; 
-}
-
-.popupVet.active h3 { 
-	animation: entradaTitulo .0s ease .0s forwards; 
-}
-
-.popupVet.active h4 { 
-	animation: entradaSubtitulo .0s ease .0s forwards; 
-}
-
-.popupVet.active .contenedor-inputs { 
-	animation: entradaInputs 0s linear 0s forwards; 
-}
+.popupVet.active {	transform: scale(1); opacity: 1; }
+.popupVet.active h3 { animation: entradaTitulo .0s ease .0s forwards; }
+.popupVet.active h4 { animation: entradaSubtitulo .0s ease .0s forwards; }
+.popupVet.active .contenedor-inputs { animation: entradaInputs 0s linear 0s forwards; }
 
 .overlayOff{
     background: rgba(0,0,0,.3);
@@ -398,11 +487,9 @@ h1 {
 	visibility: hidden;
 
 }
-
 .overlayOff.active {
 	visibility: visible;
 }
-
 .popupOff {
 	background: #F8F8F8;
 	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.3);
@@ -415,9 +502,7 @@ h1 {
 	transition: .3s ease all;
 	transform: scale(0.7);
 	opacity: 0;
-}
-
-.popupOff .btn-cerrar-popupOff {
+}.popupOff .btn-cerrar-popupOff {
 	font-size: 16px;
 	line-height: 16px;
 	display: block;
@@ -428,9 +513,7 @@ h1 {
 
 .popupOff .btn-cerrar-popupOff:hover {
 	color: #000;
-}
-
-.popupOff h3 {
+}.popupOff h3 {
 	font-size: 36px;
 	font-weight: 600;
 	margin-bottom: 10px;
@@ -446,9 +529,7 @@ h1 {
 
 .popupOff form .contenedor-inputs {
 	opacity: 0;
-}
-
-.contenedor-inputs img{
+}.contenedor-inputs img{
     float: left;
     
     width: 50px;
@@ -463,7 +544,7 @@ h1 {
 	font-size: 18px;
 	line-height: 52px;
 	text-align: center;
-	border: 1px solid #BBBBBB;
+	border: none;
 }
 
 .popupOff form .btn-submit {
@@ -484,28 +565,29 @@ h1 {
 	background: rgba(94,125,227, .9);
 }
 
-.popupOff.active {
-		transform: scale(1); opacity: 1; 
-}
-
-.popupOff.active h3 { 
-	animation: entradaTitulo .0s ease .0s forwards; 
-}
-
-.popupOff.active h4 { 
-	animation: entradaSubtitulo .0s ease .0s forwards; 
-}
-.popupOff.active .contenedor-inputs { 
-	animation: entradaInputs 0s linear 0s forwards; 
-}
+.popupOff.active {	transform: scale(1); opacity: 1; }
+.popupOff.active h3 { animation: entradaTitulo .0s ease .0s forwards; }
+.popupOff.active h4 { animation: entradaSubtitulo .0s ease .0s forwards; }
+.popupOff.active .contenedor-inputs { animation: entradaInputs 0s linear 0s forwards; }
 
 .RegiOFF{
-    color: rgb(94, 72, 72);
-}
+	color: rgba(87, 146, 146, 0.623);
+    text-decoration-color: #000;
+    
 
+}
 .RegiOFF:hover{
     text-decoration-color: blue;
 
+}
+.icon {
+	padding: 15px;
+	background: rgb(105, 123, 141);
+	color: white;
+	min-width: 50px;
+	min-height: 45px;
+	text-align: center;
+	border-right: 0px;
 }
 @keyframes entradaTitulo {
 	from {
