--- a/src/main/webapp/css/tableVisitVet.css
+++ b/src/main/webapp/css/tableVisitVet.css
@@ -26,7 +26,7 @@ header {
   padding: 5px 10%;
   background-color: #96c2e6;
 }
-header .cta button {
+header .cta1 button {
   margin-top: -20px;
   margin-right: 30px;
   padding: 9px 25px;
@@ -37,7 +37,7 @@ header .cta button {
   transition: all 0.3s ease 0s;
 }
 
-header .cta button:hover {
+header .cta1 button:hover {
   background-color: black;
 }
 
