--- a/src/main/webapp/css/Officer.css
+++ b/src/main/webapp/css/Officer.css
@@ -2,13 +2,14 @@
 
 html,
 body {
-    background-image: url("https://i.ibb.co/hDxNbTS/transparent.png");
-    background-color: #E6BA96;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
+  background-image: url("https://i.ibb.co/hDxNbTS/transparent.png");
+  background-color: #96c2e6;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
+
 
 li, a, button {
     font-family: "Montserrat", sans-serif;
@@ -19,19 +20,18 @@ li, a, button {
 }
 
 header {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding: 5px 10%;
-    background-color: #96c2e6;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 5px 10%;
+  background-color: #BE96E6;
 }
-
 
 header .cta button {
     margin-top: -20px;
     margin-right: 30px;
     padding: 9px 25px;
-    background-color: rgba(172, 141, 230, 0.829);
+    background-color: rgba(144, 230, 141, 0.829);
     border: none;
     border-radius: 50px;
     cursor: pointer;
@@ -51,8 +51,8 @@ header .cta button:hover {
 }
 
 .logoUser{
-    width: 10%;
-    margin-top: -5px;
+  width: 10%;
+  margin-top: -5px;
 }
 
 .nav_links {
@@ -76,23 +76,22 @@ header .cta button:hover {
 .contenedor-inputs img{
     float: left;
     width: 50px;
-    height: 10px;
+    height: 50px;
 
 }
 
-.containerOff {
+.container {
     width: 100%;
-    /*width: 2000px;*/
-    height: 250px;
+    width: 2000px;
+    height: 400px;
     display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
-    cursor: pointer;
+	cursor: pointer;
 }
 
-.containerOff .images {
-    width: 15%;
+.container .images {
+    width: 30%;
     align-content: center;
 }
 
@@ -105,29 +104,29 @@ h1 {
     font-size: 70px;
 }
 
-.containerOff .images img {
+.container .images img {
     border-radius: 10px;
     margin-left: auto;
     margin-right: auto;
     display: block;
 }
 
-.containerOff .images h4 {
+.container .images h4 {
     text-align: center;
-    margin-top: -30px;
+    margin-top: 0px;
     font-weight: 600;
     color: white;
 
-
+    
 }
-.containerOff .images h5{
-    color: white;
-    text-align: center;
+.container .images h5{
+	color: white;
+	 text-align: center;
+	
+	 font-weight: bold;
+ }
 
-    font-weight: bold;
-}
-
-.containerOff .images:hover {
+.container .images:hover {
     transform: translate(-15px);
     transition: 0.5s;
     box-shadow: 0 12px 14px rgba(0, 0, 0, 2);
@@ -140,23 +139,23 @@ h1 {
     align-content: center;
 }
 
+  
+  .btn {
+	background-color: rgb(65, 124, 184);
+	color: white;
+	padding: 15px 10px;
+	border: none;
+	cursor: pointer;
+	width: 100%;
+	opacity: 0.9;
+  }
+  
+  .btn:hover {
+	opacity: 1;
+  }
 
-.btn {
-    background-color: rgb(65, 124, 184);
-    color: white;
-    padding: 15px 10px;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    opacity: 0.9;
-}
 
-.btn:hover {
-    opacity: 1;
-}
-
-
-.box {
+  .box {
     position: absolute;
     left: 34%;
     margin-top: 30px;
@@ -165,20 +164,20 @@ h1 {
     box-sizing: border-box;
     background: rgba(36, 32, 41, 0.6);
     border-radius: 0.625rem;
-}
-
-.box h2 {
+  }
+  
+  .box h2 {
     margin: 0 0 1.875rem;
     padding: 0;
     color: #fff;
     text-align: center;
-}
-
-.box .inputBox {
+  }
+  
+  .box .inputBox {
     position: relative;
-}
-
-.box .inputBox input {
+  }
+  
+  .box .inputBox input {
     width: 100%;
     padding: 0.625rem 0;
     font-size: 1rem;
@@ -189,9 +188,9 @@ h1 {
     border-bottom: 0.065rem solid #fff;
     outline: none;
     background: transparent;
-}
-
-.box .inputBox label {
+  }
+  
+  .box .inputBox label {
     position: absolute;
     top: 0;
     left: 0;
@@ -200,18 +199,18 @@ h1 {
     color: #fff;
     pointer-events: none;
     transition: 0.5s;
-}
-
-.box .inputBox input:focus ~ label,
-.box .inputBox input:valid ~ label,
-.box .inputBox input:not([value=""]) ~ label {
+  }
+  
+  .box .inputBox input:focus ~ label,
+  .box .inputBox input:valid ~ label,
+  .box .inputBox input:not([value=""]) ~ label {
     top: -1.125rem;
     left: 0;
     color: #03a9f4;
     font-size: 0.75rem;
-}
-
-.box input[type="submit"] {
+  }
+  
+  .box input[type="submit"] {
     width: 100%;
     border: none;
     outline: none;
@@ -221,28 +220,28 @@ h1 {
     cursor: pointer;
     border-radius: 0.312rem;
     font-size: 1rem;
-}
-
-.box input[type="submit"]:hover {
+  }
+  
+  .box input[type="submit"]:hover {
     background-color: #181f22;
-}
+  }
 
-
-.box .inputBox .file {
+  
+  .box .inputBox .file {
     color: white;
-}
+  }
 
-.icon {
-    padding: 10px;
-    background: rgb(105, 123, 141);
-    color: white;
-    min-width: 50px;
-    text-align: center;
-}
+  .icon {
+	padding: 10px;
+	background: rgb(105, 123, 141);
+	color: white;
+	min-width: 50px;
+	text-align: center;
+  }
 
-@media screen and (max-width: 600px) {
+  @media screen and (max-width: 600px) {
     .col-25, .col-75, input[type=submit] {
-        width: 100%;
-        margin-top: 0;
+      width: 100%;
+      margin-top: 0;
     }
-}
+  }
