--- a/src/main/webapp/css/tableVisitVet.css
+++ b/src/main/webapp/css/tableVisitVet.css
@@ -25,18 +25,18 @@ header {
   padding: 5px 10%;
   background-color: #96c2e6;
 }
-header .cta button {
+header .cta1 button {
   margin-top: -20px;
   margin-right: 30px;
   padding: 9px 25px;
-  background-color: rgba(144, 230, 141, 0.829);
+  background-color: rgba(172, 141, 230, 0.829);
   border: none;
   border-radius: 50px;
   cursor: pointer;
   transition: all 0.3s ease 0s;
 }
 
-header .cta button:hover {
+header .cta1 button:hover {
   background-color: black;
 }
 
@@ -62,7 +62,7 @@ header .cta button:hover {
 
 .container {
   margin-top: 30px;
-  width: 60%;
+  width: 100%;
   background-color:#cfe2ff;
   border-radius: 8px;
   color: #312929;
@@ -81,7 +81,7 @@ header .cta button:hover {
 
 .container .form .form-label {
   float: right;
-  width: 58%;
+  width: 50%;
 }
 
 h1 {
@@ -345,21 +345,39 @@ opacity: 0;
 }
 
 table {
-    text-align: center;
-    width: 100%;
-    border-radius: 8px;
-  
+  text-align: center;
+  width: 100%;
+  border-radius: 8px;
 }
 
-th, td {
-    padding: 8px;
+th,
+td {
+  padding: 8px;
 }
 
 thead {
-    border-bottom: solid 5px white;
-    color: black;
-    border-radius: 8px;
+  background-color: rgb(205, 228, 255);
+  border-bottom: solid 5px black;
+  color: black;
+  border-radius: 8px;
 }
+
+tbody {
+  background: rgba(125, 197, 111, 0.253);
+  color: white;
+  border-radius: 8px;
+}
+
+tr:nth-child(even) {
+  background: rgba(125, 197, 111, 0.259);
+}
+
+tr:hover td {
+  background-color: rgb(191, 212, 240);
+  color: black;
+}
+
+
 
 
   input {
